# projectctl

./: CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  versions.json
src/: config.rs  deps.rs  display.rs  git.rs  main.rs  project.rs  services.rs  templates.rs
